# ill-project-template

./: CMakeLists.txt  LICENSE  README.md  build
apps/: CMakeLists.txt  main.cpp
include/ill/: example.h
src/: CMakeLists.txt  example.cpp  main.c
